# StevEngine

./: .gitignore  .gitmodules  BasicVisualComponents.cpp  BasicVisualComponents.hpp  CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  Colliders.cpp  Colliders.hpp  Debug.cpp  Debug.hpp  Doxyfile  Engine.cpp  Engine.h  Engine.hpp  GameObject.cpp  GameObject.h  GameObject.hpp  InputSystem.cpp  InputSystem.h  InputSystem.hpp  LICENSE.md  Log.cpp  Log.hpp  Main.cpp  Makefile  Physics.cpp  Physics.hpp  ReadMe.md  ResourceManager.cpp  ResourceManager.hpp  StevEngine.hpp  StevEngine.sln  StevEngine.vcxproj  StevEngine.vcxproj.filters  Utilities.cpp  Utilities.h  Utilities.hpp
.github/workflows/: build.yaml  documentation.yaml
.zed/: debug.json  tasks.json
Engine/: debug.cpp
Engine/Core/: Engine.cpp  Engine.hpp  GameObject.cpp  GameObject.hpp  InputSystem.cpp  InputSystem.hpp  Log.cpp  ResourceManager.cpp  Utilities.cpp
Engine/Physics/: Colliders.cpp  Colliders.hpp  Layers.cpp  Layers.hpp  RigidBody.cpp  RigidBody.hpp  System.cpp
Engine/Visuals/: BasicComponents.cpp  BasicComponents.hpp  Camera.cpp  Camera.hpp
assets/: Debug_scene.scene  cube.object  cube.xml  test.xml  test_2.txt
debug/: main.cpp
debug/assets/: Debug scene.scene  cube.object  test.txt  test_shader.frag
debug/development/: main.cpp
debug/development/assets/: Debug scene.scene  cube.object  test_shader.frag
debug/networking/client/: main.cpp
debug/networking/server/: main.cpp
debug/performance/: main.cpp
debug/performance/assets/: scene.scene
docs/: header.html  style.css
include/: BasicVisualComponents.hpp  Camera.hpp  Colliders.hpp  Engine.hpp  GameObject.hpp  InputSystem.hpp  Physics.hpp  PhysicsBody.hpp  ResourceManager.hpp  StevEngine.hpp  Utilities.hpp
include/assimp/: revision.h
include/audio/: AudioSystem.hpp  Emitter.hpp
include/data/: Settings.hpp
include/main/: Component.hpp  EngineEvents.hpp  EventSystem.hpp  GameObject.hpp  Log.hpp  ResourceManager.hpp  Scene.hpp  SceneManager.hpp
include/physics/: PhysicsSystem.hpp  RigidBody.hpp
include/utilities/: Color.hpp  KeyValueStore.hpp  Matrix4.hpp  Quaternion.hpp  Terrain.hpp  Vector3.hpp  Vertex.hpp
include/visuals/: Camera.hpp  ModelRenderer.hpp  Primitive.hpp  Texture.hpp
include/visuals/renderer/: Object.hpp  RenderComponent.hpp  RenderSystem.hpp
include/visuals/shaders/: ShaderProgram.hpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/uuidv7/: uuidv7.h
src/: BasicVisualComponents.cpp  Camera.cpp  Colliders.cpp  Engine.cpp  GameObject.cpp  InputSystem.cpp  Log.cpp  Physics.cpp  PhysicsBody.cpp  ResourceManager.cpp  Utilities.cpp  debug.cpp  main.cpp
src/audio/: AudioSystem.cpp  AudioSystem.hpp  Emitter.cpp  Emitter.hpp  System.cpp  System.hpp
src/core/: Component.cpp  Component.hpp  Engine.cpp  Engine.hpp  GameObject.cpp  GameObject.hpp  InputSystem.cpp  InputSystem.hpp  ResourceManager.cpp  ResourceManager.hpp  Utilities.cpp  Utilities.hpp
src/core/scenes/: Component.cpp  Component.hpp  GameObject.cpp  GameObject.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
src/core/utilities/: ID.hpp  Quaternion.cpp  Range3.cpp  Range3.hpp  Vector2.cpp  Vector3.cpp
src/data/: DataManager.cpp  DataManager.hpp  Settings.cpp  Settings.hpp
src/inputs/: InputSystem.cpp  InputSystem.hpp
src/main/: Component.cpp  Component.hpp  DataManager.cpp  DataManager.hpp  Engine.cpp  Engine.hpp  EngineEvents.hpp  EventSystem.cpp  EventSystem.hpp  GameObject.cpp  GameObject.hpp  InputSystem.cpp  InputSystem.hpp  Log.cpp  Log.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Settings.cpp  Settings.hpp
src/main/multithreading/: JobQueue.cpp  JobQueue.hpp  Lockable.cpp  Lockable.hpp
src/networking/: client.cpp  client.hpp  networking.cpp  networking.hpp  server.cpp  server.hpp  socket.hpp
src/physics/: CharacterBody.cpp  CharacterBody.hpp  Colliders.cpp  Colliders.hpp  Jolt.h  Layers.cpp  Layers.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RigidBody.cpp  RigidBody.hpp  System.cpp  System.hpp
src/scenes/: Component.cpp  Component.hpp  GameObject.cpp  GameObject.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
src/utilities/: Color.cpp  Color.hpp  ID.cpp  ID.hpp  KeyValueStore.cpp  KeyValueStore.hpp  Matrix4.cpp  Matrix4.hpp  Model.cpp  Model.hpp  Quaternion.cpp  Quaternion.hpp  Random.cpp  Random.hpp  Range3.cpp  Range3.hpp  Serializable.cpp  Serializable.hpp  Stream.cpp  Stream.hpp  Terrain.cpp  Terrain.hpp  Texture.cpp  Texture.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp  Vertex.cpp  Vertex.hpp
src/visuals/: BasicComponents.cpp  BasicComponents.hpp  Camera.cpp  Camera.hpp  Lights.cpp  Lights.hpp  Material.cpp  Material.hpp  Model.cpp  Model.hpp  ModelRenderer.cpp  ModelRenderer.hpp  Primitive.cpp  Primitive.hpp  TerrainRenderer.cpp  TerrainRenderer.hpp  Texture.cpp  Texture.hpp
src/visuals/gui/: GUISystem.cpp  GUISystem.hpp
src/visuals/render/: Component.cpp  Component.hpp  CustomObject.hpp  Lights.cpp  Lights.hpp  Object.cpp  Object.hpp  RenderComponent.cpp  RenderComponent.hpp  RenderSystem.cpp  RenderSystem.hpp  System.cpp  System.hpp
src/visuals/renderer/: Object.cpp  Object.hpp  RenderComponent.cpp  RenderComponent.hpp  RenderSystem.cpp  RenderSystem.hpp
src/visuals/shaders/: Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  default.frag  default.vert  definitions.frag  definitions.vert  lights.frag  main.frag  main.vert
x64/Debug/: StevEngine.dll.recipe  StevEngine.exe.recipe  StevEngine.idb  StevEngine.ilk  StevEngine.lib  StevEngine.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/StevEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  StevEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
